# Project-2020

./: .gitmodules  CMakeLists.txt  Givens_rotation.h  Hessenberg_reduction.h  Householder_reflection.h  Householder_reflector.h  Math_tools.h  QR_algorithm.h  QR_shifts.h  README.md  Reduction.h  Tests.h  hessenberg_reduction.h  main.cpp
schur_decomposition/: givens_rotation.h  hessenberg_reduction.h  householder_reflection.h  schur_decomposition.h  schur_decomposition_symmetric.h  tridiagonal_symmetric.h
tests/: test_find_angle.cpp  test_find_angle.h  test_givens_rotator.cpp  test_givens_rotator.h  test_hessenberg_reduction.cpp  test_hessenberg_reduction.h  test_householder_reflector.cpp  test_householder_reflector.h  test_schur_decomposition.cpp  test_schur_decomposition.h  test_schur_decomposition_symmetric.cpp  test_schur_decomposition_symmetric.h  tests.cpp
